# clearaudio

./: .gitignore  README.md  pyproject.toml
clearaudio/: create_dataset.py  dummy_train.py  generate.py  generate_wavenet.py  train.py
clearaudio/additional_conf/dataset/: extra_dataset.yaml
clearaudio/conf/: config.yaml
clearaudio/conf/dataset/: .gitignore  base_dataset.yaml  maestro_local.yaml  maestro_local_w16.yaml  maestro_scitas.yaml  maestro_scitas_diffusion.yaml  tan_scitas.yaml  yes_no_dataset.yaml
clearaudio/conf/dataset/low_quality_effect/: random.yaml  test.yaml  train.yaml
clearaudio/conf/generator/: base_generator.yaml  diffusion_generator.yaml  tan_generator.yaml
clearaudio/conf/hydra/help/: clearaudio_help.yaml
clearaudio/conf/trainer/: base_trainer.yaml  diffusion_imagenet_local.yaml  diffusion_local.yaml  diffusion_scitas.yaml  maestro_diffusion_local.yaml  maestro_diffusion_scitas.yaml  maestro_wavenet_scitas.yaml  scitas.yaml  tan_vqvae.yaml  tan_wavenet_local.yaml  tan_wavenet_scitas.yaml  vqvae.yaml  vqvae_local.yaml  wavenet_local.yaml  wavenet_local_w16.yaml
clearaudio/datasets/: audio.py  image_datasets.py  mel.py
clearaudio/models/guided_diffusion/: dist_util.py  gaussian_diffusion.py  script_util.py
clearaudio/models/transformer/: pos_emb.py  transformer.py
clearaudio/models/vqvae/: bottleneck.py  encdec.py  encoder_decoder.py  resnet.py  vqvae_current.py  vqvae_old.py
clearaudio/models/wavenet/: postnet.py  wavenet_decoder.py  wavenet_discriminator.py  wavenet_encoder.py
clearaudio/trainers/: base_trainer.py  trainer_diffusion.py  trainer_vqvae.py  trainer_wavenet.py
clearaudio/transforms/: signal.py
clearaudio/utils/: checkpoint.py  utils.py  vqvae_utils  wavenet_utils.py
clearaudio/viz/: plots.py
notebooks/: Test_random_effects.ipynb  detuner.ipynb  equalizers.ipynb  improved_analysis_visualizations.ipynb
samples/hq/: Untitled.ipynb
tests/: test_clearml.py  test_create_dataset.py  test_slurm.py  test_trainer.py  test_transforms.py  utils.py
